[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "fviz"
author = "Anjan Roy"
author-email = "anjanroy@yandex.com"
home-page = "https://itzmeanjan.github.io/fviz"
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
requires = ["seaborn", "matplotlib"]
requires-python=">=3.7"
description-file="README.md"

[tool.flit.metadata.requires-extra]
dev = ["flit"]

[tool.flit.scripts]
fviz = "fviz.main:main"
